Further preparation for v0.1.0, simplified archiving endpoints to synchronous for now, docs updates
